Prevent selecting text on safari

--- a/packages/bananadrum-webapp/www/style.css
+++ b/packages/bananadrum-webapp/www/style.css
@@ -200,6 +200,7 @@ body {
 .track-viewer {
   min-width: 100%;
   display: flex;
+  -webkit-user-select: none; /* On safari, dragging to select notes causes a native selection of lots of stuff. So we prevent it. */
 }
 
 @keyframes loadingPulse {
